examples/pass/basics/literal.dew
// expect: 2026
def main = fn { 2026 -> stdout; };
