examples/fail/unbound_var.dew
def main = fn -> Int { undefined_var }
